# advent-of-code

./: .gitignore  LICENSE  README.md  day6.py  day7.py  day9.py  intcode.py  mantest.py  test_day3.py  test_day4.py  test_intcode.py
2015/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day2.py  day20.py  day21.py  day23.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  pyproject.toml
2019/: day12.py  day13.py  day14.py  day2.py  day6.py  game.16k.pickle  game.19k.pickle  intcode.py
2020/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16-other.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  helpers.py  parsetab.py  testplot.py
2021/1/: template.py
2021/2/: animation.py  template.py
2021/3/: template.py
2021/4/: template.py
2021/5/: template.py
2021/6/: template.py
2021/7/: template.py
2021/8/: template.py
2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day5guess.txt  environment.yml
